--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "fresh": "rm -rf yarn.lock && rm -rf node_modules && yarn cache clean && yarn install"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.3",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.6",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "react-native-logs": "^5.0.1",
