--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-group-routes": "^1.1.0",
     "helmet": "^7.0.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
