--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.6",
+    "@types/uuid": "^9.0.5",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -32,6 +33,7 @@
     "mongoose": "^7.5.3",
     "morgan": "^1.10.0",
     "react-native-logs": "^5.0.1",
+    "uuid": "^9.0.1",
     "winston": "^3.10.0"
   },
   "devDependencies": {
